# HierFinRAG

./: .env.example  QUICKSTART.md  README.md  TRAINING_GUIDE.md  generate_and_push.sh  generate_and_train.py  inspect_training_data.py  main.py  pyproject.toml  run_pipeline.py  test_api_connection.py  test_synthetic_generation.py  test_training.py
data/: mock_vietnamese_financial.json  training_data.json
data/synthetic_documents/: doc_fpt_2020_007.json  doc_fpt_2020_010.json  doc_fpt_2020_017.json  doc_fpt_2022_005.json  doc_fpt_2023_009.json  doc_fpt_2023_015.json  doc_hòa_phát_2020_013.json  doc_hòa_phát_2020_017.json  doc_hòa_phát_2022_000.json  doc_hòa_phát_2024_008.json  doc_mobifone_2020_012.json  doc_mobifone_2020_015.json  doc_mobifone_2021_019.json  doc_mobifone_2023_001.json  doc_mobifone_2024_003.json  doc_nvidia_2023_011.json  doc_openai_2023_012.json  doc_petrovietnam_2020_011.json  doc_petrovietnam_2023_008.json  doc_vietcombank_2020_014.json  doc_vietcombank_2021_002.json  doc_vietcombank_2021_016.json  doc_vietcombank_2023_009.json  doc_vietinbank_2020_004.json  doc_vietinbank_2020_018.json  doc_vietinbank_2022_000.json  doc_vietinbank_2024_002.json  doc_vietinbank_2024_018.json  doc_viettel_2020_003.json  doc_viettel_2020_006.json  doc_viettel_2021_014.json  doc_viettel_2023_010.json  doc_viettel_2023_016.json  doc_vinamilk_2021_001.json  doc_vinamilk_2024_011.json  doc_vingroup_2020_007.json  doc_vingroup_2024_005.json  doc_vnpt_2021_004.json  doc_vnpt_2022_012.json  doc_vnpt_2023_013.json  (+1 more)
data/test_synthetic/: doc_vnpt_2020_000.json
(+9 files in other folders)
